truncate issue p's

--- a/src/index.css
+++ b/src/index.css
@@ -97,20 +97,54 @@ header {
   height: 100vh;
   overflow-y: scroll;
   min-width: 400px;
+  padding: 20px;
+  padding-right: 35px;
 }
+
+.repoGenInfo {
+  /* padding: 20px; */
+  width: inherit;
+}
+
+.repoGenInfo a {
+  text-decoration: none;
+}
+
+.repoGenInfo h1 {
+  font-size: 25px;
+  margin: 0;
+  color: white;
+}
+
+.repoGenInfo h2 {
+  font-size: 16px;
+  word-wrap: break-word;
+}
+
+.repoGenInfo p {
+  font-size: 15px;
+}
+
 .issuesHolder {
+  /* padding: 20px; */
 }
 
 .issue {
-  width: 300px;
+  min-height: 150px;
+}
 
-  border: 1px solid red;
+.issue h2 {
+  font-size: 16px;
 }
 
 .issue p {
-  font-size: 14px;
-  height: 150px;
+  font-size: 15px;
+  max-width: inherit;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
 }
 @media screen and (max-width: 800px) {
   .repo-results {
